# human-activity-recognition

./: LICENSE  README.md  pyproject.toml
src/: EDA.ipynb  eval.ipynb  training.ipynb
